# dotkit

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
src/: input.rs  lib.rs  main.rs  template.rs
src/templates/: cargo.tera  counter.tera  nft.tera
templates/: cargo.tera  lib.tera
